# distill-align-llm

./: .gitignore  CHANGELOG.md  Makefile  README.md  annotate.sh  audit.sh  baseline_eval_log.txt  bsft_full_log.txt  bsft_quality_log.txt  bsft_token_log.txt  check.sh  dpo_scaling_log.txt  ece.sh  epoch_scaling_log.txt  eval_v2_judge_log.txt  ipo_log.txt  llama3b_log.txt  mistral_log.txt  pyproject.toml  rejudge.sh  simpo_log.txt  temp_sweep_log.txt  token_eval_log.txt  trap.sh  truthfulqa_log.txt
configs/: llama_3b.yaml  llama_3b_3ep.yaml  llama_3b_5ep.yaml  llama_3b_7ep.yaml  llama_8b_5ep.yaml  local_small.yaml  mistral_7b.yaml
dashboard/: app.py  sample_comparisons.json  v2_results.json  v2_results_template.json
data/: eval_factuality.jsonl  eval_factuality_500.jsonl  eval_factuality_v2.jsonl  factual_dpo_pairs.jsonl  techfact_100.jsonl  techfact_trap.jsonl  technical_instructions.jsonl  uncertainty_examples.jsonl
docs/: RESULTS.md
notebooks/: train_align.ipynb
outputs/: factuality_comparison.json  factuality_responses.json  semantic_eval_results.json
outputs/bsft_3ep_500/: simpo_(llama-3.1-8b)_results.csv  simpo_(llama-3.1-8b)_summary.json
outputs/bsft_ablation/: simpo_(llama-3.1-8b)_results.csv  simpo_(llama-3.1-8b)_summary.json
outputs/bsft_ablation_500/: simpo_(llama-3.1-8b)_results.csv  simpo_(llama-3.1-8b)_summary.json
outputs/bsft_ablation_500_quality/: simpo_(llama-3.1-8b)_results.csv  simpo_(llama-3.1-8b)_summary.json
outputs/bsft_ablation_500_token/: simpo_(llama-3.1-8b)_results.csv  simpo_(llama-3.1-8b)_summary.json
outputs/bsft_baseline_500/: simpo_(llama-3.1-8b)_results.csv  simpo_(llama-3.1-8b)_summary.json
outputs/calibration/base/: ptrue.json
outputs/calibration/dpo_llama8b/: ptrue.json
outputs/calibration/sft/: ptrue.json
outputs/cross_method/: dpo_(llama-3.2-3b)_results.csv  dpo_(llama-3.2-3b)_summary.json  dpo_(mistral-7b)_results.csv  dpo_(mistral-7b)_summary.json
outputs/cross_method_3b_5ep/: simpo_(llama-3.1-8b)_results.csv  simpo_(llama-3.1-8b)_summary.json
outputs/ece/dpo_llama8b/: ece.json
outputs/eval_v1_judge/: afg_results.json  eval_v2_full_results.csv  eval_v2_summary.csv
outputs/eval_v2_judge/: afg_results.json  eval_v2_full_results.csv  eval_v2_summary.csv
outputs/rejudge/gpt-4o/: scores.csv
outputs/scaling/: all_results.json  sft_10000ex_1ep_eval.txt  sft_2500ex_1ep_eval.txt  sft_2500ex_3ep_eval.txt  sft_5000ex_1ep_eval.txt  sft_5000ex_3ep_eval.txt  sft_875ex_1ep_eval.txt  sft_875ex_3ep_eval.txt  sft_875ex_5ep_eval.txt
outputs/sprint3/: attention_shift_results.csv  probability_mass_analysis.json  suppression_cases.csv  temp_sweep_dpo_5ep_full.csv  temp_sweep_dpo_5ep_paper_table.csv  temp_sweep_dpo_5ep_summary.json  temperature_sweep_dpo_5ep.json  temperature_sweep_dpo_5ep_full.json  token_rank_full.csv  token_rank_summary.json
outputs/trap/llama8b/: responses_base.csv  responses_dpo.csv  responses_sft.csv  summary.json
outputs/truthfulqa/: base_3b_mc_details.json  base_3b_mc_summary.json  base_8b_mc_details.json  base_8b_mc_summary.json  base_mistral_mc_details.json  base_mistral_mc_summary.json  bsft_dpo_3b_mc_details.json  bsft_dpo_3b_mc_summary.json  dpo_8b_actual_mc_details.json  dpo_8b_actual_mc_summary.json  dpo_8b_mc_details.json  dpo_8b_mc_summary.json  dpo_mistral_mc_details.json  dpo_mistral_mc_summary.json  sft_3b_mc_details.json  sft_3b_mc_summary.json  sft_mistral_mc_details.json  sft_mistral_mc_summary.json
scripts/: attention_shift_analysis.py  audit_references.py  build_trap_set.py  calibration_ptrue.py  chat.py  compare_models.py  cross_method_eval.py  ece.py  eval_factuality.py  eval_factuality_all.py  eval_factuality_v2.py  eval_semantic.py  eval_token_probs.py  eval_truthfulqa.py  generate_benchmark.py  generate_eval_prompts.py  honesty_eval.py  human_annotation.py  ipo.py  make_figures.py  probability_mass_analysis.py  rejudge.py  run_bsft.py  run_dpo.py  run_full_pipeline.py  run_sft.py  run_sft_scaling.py  setup_gpu.sh  setup_lightning.sh  simpo.py  temperature_sweep.py  token_rank_analysis.py  trap_eval.py
src/distill_align/: __init__.py
src/distill_align/config/: __init__.py  manager.py  models.py
src/distill_align/data/: __init__.py  processor.py
src/distill_align/evaluation/: __init__.py
src/distill_align/models/: __init__.py  loader.py
src/distill_align/monitoring/: __init__.py  service.py
src/distill_align/serving/: __init__.py  api.py  engine.py
src/distill_align/training/: __init__.py  dpo.py  rlhf.py  sft.py
tests/: test_config.py  test_data_processor.py
